# reyzbikh_buro_crm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-19-plan-1-foundation.md  2026-05-19-plan-2-domain-schema.md  (+3 more)
migrations/: env.py
migrations/versions/: 549130e6f77b_domain_schema_v1.py  6fc5437eff9c_initial.py
src/crm/: __init__.py  config.py  container.py  logging.py
tests/: conftest.py
tests/integration/: conftest.py  test_alembic_upgrade.py  test_api_healthz.py  test_bot_follow_up_outcome.py  test_bot_handlers.py  test_bot_mark_sent_callback.py  test_bot_propose_callback.py  test_bot_publish_callback.py  test_bot_start.py  test_db_connection.py  test_generate_proposal.py  test_intake_lead.py  test_mark_proposal_sent.py  test_migrations.py  test_publish_proposal_to_gdoc.py  test_qualify_lead.py  test_record_follow_up_result.py  test_repositories.py  test_send_follow_up.py  test_worker_publish_gdoc.py  test_worker_runner.py  test_worker_send_follow_up.py
tests/unit/: test_config.py  test_container.py  test_enqueue_job.py  test_enums.py  test_fake_adapters.py  test_generate_proposal_unit.py  test_intake_lead_unit.py  test_logging.py  test_mark_proposal_sent_unit.py  test_openai_extractor.py  test_openai_proposal_writer.py  test_prompts.py  test_publish_proposal_to_gdoc_unit.py  test_qualify_lead_unit.py  test_record_event.py  test_record_follow_up_result_unit.py  test_scheduler_backoff.py  test_send_follow_up_unit.py
(+60 files in other folders)
